unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/ebcm__Dynamic_Payload__c.object-meta.xml
<CustomObject>
    <label>Dynamic Payload</label>
    <nameField>
        <label>Dynamic Payload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Payloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>