unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/fields/ebcm__Auto_Delete__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Auto_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow users to delete records of dynamic payload if field is true</description>
    <label>Auto Delete</label>
    <type>Checkbox</type>
</CustomField>