unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/fields/ebcm__Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Bot_Name__c</fullName>
    <label>Bot Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>