unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/fields/ebcm__RoutableId__c.field-meta.xml
<CustomField>
    <fullName>ebcm__RoutableId__c</fullName>
    <label>RoutableId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>