unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/fields/ebcm__Type__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MiniCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>