unpackaged/main/default/objects/ebcm__Dynamic_Payload__c/listViews/ebcm__All.listView-meta.xml
<ListView>
    <fullName>ebcm__All</fullName>
    <columns>NAME</columns>
    <columns>ebcm__Bot_Name__c</columns>
    <columns>ebcm__Dialog_Request_Payload__c</columns>
    <columns>ebcm__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>